--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   - cargo test --verbose --all
 
 after_success:
-  - cargo coveralls --exclude-path=src/data_structure/item/item_data --exclude-pattern=/.cargo
+  - cargo coveralls --exclude-path=src/data_structure/item/item_data --exclude-pattern=/.cargo,src/main.rs
 
 notifications:
   email: false
