--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   - cargo test --verbose --all
 
 after_success:
-  - cargo coveralls --exclude-pattern=/.cargo,src/main.rs,src/data_structure/item/item_data/**/*.rs
+  - cargo coveralls --exclude-pattern=/.cargo,src/main.rs,src/data_structure/item/item_data/*.rs
 
 notifications:
   email: false
