--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "zotero"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["eonm <eon.mathis@gmail.com>"]
 edition = "2018"
 license = "MIT"
 description = "Communicate with Zotero API"
 repository = "https://github.com/Eonm/zotero"
+keywords = ["zotero", "digital-humanities", "citations", "zotero-api"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
