--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ keywords = ["zotero", "digital-humanities", "citations", "zotero-api"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.9.24"
-serde_derive = "1.0.104"
-serde_json = "1.0.44"
-serde = "1.0.104"
-derive_builder = "0.9.0"
-url = "2.1.0"
+reqwest = { version = "0.11.11", features = ["blocking", "json"] }
+serde_derive = "1.0.144"
+serde_json = "1.0.85"
+serde = "1.0.144"
+derive_builder = "0.11.2"
+url = "2.2.2"
