--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,7 @@ keywords = ["zotero", "digital-humanities", "citations", "zotero-api"]
 
 [dependencies]
 reqwest = { version = "0.11.11", features = ["blocking", "json"] }
-serde_derive = "1.0.144"
 serde_json = "1.0.85"
-serde = "1.0.144"
+serde = { version = "1.0.144", features = ["derive"] }
 derive_builder = "0.11.2"
 url = "2.2.2"
