--- a/zotero/Cargo.toml
+++ b/zotero/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0.144", features = ["derive"] }
 derive_builder = "0.11.2"
 url = "2.2.2"
 zotero_derive = { path = "../zotero_derive" }
+hyperx = { version = "1.4.0", features = ["headers"] }
