--- a/zotero/Cargo.toml
+++ b/zotero/Cargo.toml
@@ -18,3 +18,4 @@ derive_builder = "0.11.2"
 url = "2.2.2"
 zotero_derive = { path = "../zotero_derive" }
 hyperx = { version = "1.4.0", features = ["headers"] }
+chrono = { version = "0.4.23", features = ["serde"] }
