--- a/zotero/Cargo.toml
+++ b/zotero/Cargo.toml
@@ -20,3 +20,4 @@ zotero_derive = { path = "../zotero_derive" }
 hyperx = { version = "1.4.0", features = ["headers"] }
 chrono = { version = "0.4.23", features = ["serde"] }
 regex = "1.7.0"
+once_cell = "1.18.0"
