implemented sync executor for requests

--- a/zotero_api/Cargo.toml
+++ b/zotero_api/Cargo.toml
@@ -23,7 +23,10 @@ regex = { workspace = true }
 once_cell = { workspace = true }
 http = "0.2.9"
 bytes = { version = "1.5.0", features = ["serde"] }
+thiserror = "1.0.50"
+async-trait = "0.1.74"
+reqwest = { version = "0.11.11", features = ["blocking", "json"] }
+hyperx = "*"
 
 [dev-dependencies]
-reqwest = { version = "0.11.11", features = ["blocking", "json"] }
 tokio = { version = "1.33.0", features = ["full"] }
