--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,3 +18,9 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: actions-rust-lang/rustfmt@2d1d4e9f72379428552fa1def0b898733fb8472d
       uses: actions-rust-lang/rustfmt@v1.1.0
+    - name: rust-clippy-check
+      # You may pin to the exact commit or the version.
+      # uses: actions-rs/clippy-check@b5b5f21f4797c02da247df37026fcd0a5024aa4d
+      uses: actions-rs/clippy-check@v1.0.7
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
